# runfilesgroupinfo.bzl

./: BUILD.bazel  CODEOWNERS  MODULE.bazel  README.md  runfilesgroupinfo.bzl
example/consumer/rules/: fake_package.bzl
example/producer/rules/: skip_interpreter.bzl  starlark_binary.bzl  starlark_library.bzl
example/src/: BUILD.bazel  group_names.bzl
private/: BUILD.bazel  well_known_groups.bzl
private/providers/: BUILD.bazel  runfilesgroupinfo.bzl
runfiles_group/private/: lib.bzl
runfiles_group/private/providers/: runfiles_group_info.bzl
runfiles_group/private/rules/: runfiles_group_analysis_test.bzl
