load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("@rules_runfiles_group//runfiles_group:runfiles_group_analysis_test.bzl", "runfiles_group_analysis_test")
load("//consumer/rules:fake_package.bzl", "fake_package")
load("//producer/rules:skip_interpreter.bzl", "skip_interpreter")
load("//producer/rules:starlark_binary.bzl", "starlark_binary")
load("//producer/rules:starlark_library.bzl", "starlark_library")

package(default_visibility = ["//visibility:public"])

P = "starlark_runfiles_group#"

# This is a mixin users can add to aspect_hints of a binary target to skip the interpreter group.
skip_interpreter(name = "skip_interpreter")

repo = repo_name() if repo_name() != "" else "_main"

# Work with generated source files
expand_template(
    name = "lib_a_generator",
    out = "lib_a.star",
    substitutions = {"{repo_name}": repo},
    template = "lib_a.star.tpl",
)

# Work with generated source files
expand_template(
    name = "lib_b_generator",
    out = "lib_b.star",
    substitutions = {"{repo_name}": repo},
    template = "lib_b.star.tpl",
)

starlark_library(
    name = "lib_a",
    srcs = ["lib_a.star"],
    data = ["a.txt"],
)

starlark_library(
    name = "lib_b",
    srcs = ["lib_b.star"],
    data = ["b.txt"],
)

starlark_binary(
    name = "adder",
    src = "adder.star",
    runfiles_grouping = "by_target",
    deps = [
        ":lib_a",
        ":lib_b",
    ],
)

starlark_binary(
    name = "adder_without_interpreter",
    src = "adder.star",
    # Signal to the packaging rules:
    # Apply a transform to the runfiles grouping.
    aspect_hints = [":skip_interpreter"],
    runfiles_grouping = "by_target",
    deps = [
        ":lib_a",
        ":lib_b",
    ],
)

starlark_binary(
    name = "hasher",
    src = "hasher.star",
    data = ["@irs_f1040//file"],
    properties = {
        "IRS_F1040_PATH": "$(rlocationpath @irs_f1040//file)",
    },
)

starlark_binary(
    name = "3p_deps_demo",
    src = "3p_deps_demo.star",
    deps = [
        "@fizzbuzz",
        "@stringutil",
    ],
)

starlark_binary(
    name = "merge_demo",
    src = "merge_demo.star",
    deps = [
        "@colors",
        "@limits",
        "@mathlib",
        "@templates",
        "@units",
    ],
)

starlark_binary(
    name = "data_has_executable",
    src = "empty.star",
    data = ["//src/shell_app:greeter"],
)

fake_package(
    name = "adder_pkg",
    binary = ":adder",
)

fake_package(
    name = "adder_without_interpreter_pkg",
    binary = ":adder_without_interpreter",
)

fake_package(
    name = "hasher_pkg",
    binary = ":hasher",
)

fake_package(
    name = "3p_deps_demo_pkg",
    binary = ":3p_deps_demo",
)

runfiles_group_analysis_test(
    name = "test_runfiles_group_invariants",
    binaries = [
        ":adder",
        ":adder_without_interpreter",
        ":hasher",
        ":3p_deps_demo",
        ":merge_demo",
        ":data_has_executable",
    ],
)

# Per-binary tests: ordering without group limits

runfiles_group_analysis_test(
    name = "test_adder_groups",
    binaries = [":adder"],
    expected_group_names = [
        P + "interpreter",
        P + "std",
        P + "//src:lib_a",
        P + "//src:lib_b",
        P + "entrypoint",
    ],
    overlapping_group_behavior = "error",
)

runfiles_group_analysis_test(
    name = "test_hasher_groups",
    binaries = [":hasher"],
    expected_group_names = [
        P + "interpreter",
        P + "std",
        P + "_main",
    ],
    overlapping_group_behavior = "error",
)

runfiles_group_analysis_test(
    name = "test_3p_deps_demo_groups",
    binaries = [":3p_deps_demo"],
    expected_group_names = [
        P + "interpreter",
        P + "std",
        P + "fizzbuzz",
        P + "stringutil",
        P + "_main",
    ],
    overlapping_group_behavior = "error",
)

# Per-binary tests: ordering with group limits

runfiles_group_analysis_test(
    name = "test_adder_groups_merged",
    binaries = [":adder"],
    expected_group_names = [
        P + "interpreter",
        P + "std",
        P + "//src:lib_a+//src:lib_b",
        P + "entrypoint",
    ],
    group_name_prefix = P,
    max_groups = 4,
    overlapping_group_behavior = "error",
)

runfiles_group_analysis_test(
    name = "test_hasher_groups_merged",
    binaries = [":hasher"],
    # All groups are alone in their rank or do_not_merge,
    # so merging cannot reduce below 3.
    expected_group_count = 3,
    expected_group_names = [
        P + "interpreter",
        P + "std",
        P + "_main",
    ],
    group_name_prefix = P,
    max_groups = 2,
    overlapping_group_behavior = "error",
)

runfiles_group_analysis_test(
    name = "test_3p_deps_demo_groups_merged",
    binaries = [":3p_deps_demo"],
    # fizzbuzz and stringutil (both rank 0) merge into fizzbuzz+stringutil.
    expected_group_names = [
        P + "interpreter",
        P + "std",
        P + "fizzbuzz+stringutil",
        P + "_main",
    ],
    group_name_prefix = P,
    max_groups = 4,
    overlapping_group_behavior = "error",
)

# merge_demo tests: 8 groups total
# rank -2: interpreter (do_not_merge)
# rank -1: std
# rank  0: colors(42), limits(43), units(40), mathlib(2296), templates(7092)
# rank  1: _main

fake_package(
    name = "merge_demo_pkg",
    binary = ":merge_demo",
)

runfiles_group_analysis_test(
    name = "test_merge_demo_groups",
    binaries = [":merge_demo"],
    expected_group_names = [
        P + "interpreter",
        P + "std",
        P + "colors",
        P + "limits",
        P + "mathlib",
        P + "templates",
        P + "units",
        P + "_main",
    ],
    overlapping_group_behavior = "error",
)

# max_groups=6: merge the 3 tiny constant libs
# units(40)+colors(42) -> "units+colors"(82), then limits(43)+"units+colors"(82) -> "limits+units+colors"(125)
runfiles_group_analysis_test(
    name = "test_merge_demo_max6",
    binaries = [":merge_demo"],
    expected_group_names = [
        P + "interpreter",
        P + "std",
        P + "limits+units+colors",
        P + "mathlib",
        P + "templates",
        P + "_main",
    ],
    group_name_prefix = P,
    max_groups = 6,
    overlapping_group_behavior = "error",
)

# max_groups=5: also merges "limits+units+colors"(125) into mathlib(2296)
runfiles_group_analysis_test(
    name = "test_merge_demo_max5",
    binaries = [":merge_demo"],
    expected_group_names = [
        P + "interpreter",
        P + "std",
        P + "limits+units+colors+mathlib",
        P + "templates",
        P + "_main",
    ],
    group_name_prefix = P,
    max_groups = 5,
    overlapping_group_behavior = "error",
)

# max_groups=4: also merges into templates, leaving one rank-0 group
runfiles_group_analysis_test(
    name = "test_merge_demo_max4",
    binaries = [":merge_demo"],
    expected_group_names = [
        P + "interpreter",
        P + "std",
        P + "limits+units+colors+mathlib+templates",
        P + "_main",
    ],
    group_name_prefix = P,
    max_groups = 4,
    overlapping_group_behavior = "error",
)

# max_groups=3: cannot reduce further (interpreter is do_not_merge,
# remaining groups are each alone in their rank)
runfiles_group_analysis_test(
    name = "test_merge_demo_max3",
    binaries = [":merge_demo"],
    expected_group_count = 4,
    expected_group_names = [
        P + "interpreter",
        P + "std",
        P + "limits+units+colors+mathlib+templates",
        P + "_main",
    ],
    group_name_prefix = P,
    max_groups = 3,
    overlapping_group_behavior = "error",
)
